Added metrics-server, tags, fixed systemd units, added no-flannel option

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: system-wide packages
+- name: "install : system-wide packages"
   apt:
     name:
       - bash-completion
@@ -8,7 +8,7 @@
     cache_valid_time: 3600
 
 
-- name: download k3s binary
+- name: "install : download k3s binary"
   get_url:
     url: "https://github.com/rancher/k3s/releases/download/v{{ k3s_version }}/k3s"
     remote_src: yes
@@ -16,13 +16,13 @@
     mode: 0777
 
 
-- name: setup auto-completion
+- name: "install : setup auto-completion"
   shell: "k3s kubectl completion bash > /etc/bash_completion.d/kubectl"
   args:
     creates: /etc/bash_completion.d/kubectl
 
 
-- name: place links
+- name: "install : place links"
   file:
     src: /bin/k3s
     dest: "/bin/{{ item }}"
@@ -32,7 +32,7 @@
     - kubectl
 
 
-- name: k3s-server.service
+- name: "install : place k3s-server.service"
   template:
     src: k3s-server.service.j2
     dest: /etc/systemd/system/k3s-server.service
@@ -40,42 +40,53 @@
   register: k3s_service_server
 
 
-- name: (re)start k3s-server.service
+- name: "install : (re)start k3s-server.service"
   systemd:
     name: k3s-server.service
     enabled: yes
     state: "{% if k3s_service_server is changed %}re{% endif %}started"
     daemon_reload: yes
   when: inventory_hostname in groups['k3s-master']
+  tags:
+    - runtime
 
 
-- name: wait for server to be running
+- name: "install : wait for server to be running"
   wait_for:
     path: /var/lib/rancher/k3s/server/node-token
     state: present
     timeout: 60
   when: inventory_hostname in groups['k3s-master']
+  tags:
+    - runtime
 
 
-- name: Read node join token
+# monkeypath. detected bugs with {{ lookup('file', '') }}
+- name: "install : read node join token"
   shell: cat /var/lib/rancher/k3s/server/node-token
   when: inventory_hostname in groups['k3s-master']
   register: k3s_node_token
   changed_when: false
+  tags:
+    - runtime
 
 
-- name: k3s-node.service
+- name: "install : place k3s-node.service"
   template:
     src: k3s-node.service.j2
     dest: /etc/systemd/system/k3s-node.service
   when: inventory_hostname in groups['k3s-node']
   register: k3s_service_node
+  tags:
+    - runtime
 
 
-- name: (re)start k3s-node.service
+- name: "install : (re)start k3s-node.service"
   systemd:
     name: k3s-node.service
     enabled: yes
     state: "{% if k3s_service_node is changed %}re{% endif %}started"
     daemon_reload: yes
   when: inventory_hostname in groups['k3s-node']
+  tags:
+    - runtime
